- Changed the way we switch languages / pages, to be more friendly with browsers, and search engines. - hacked around a bug that caused all text to be invisible on the page on first load - changed the order of lang selection - remove fade-in effect.

--- a/www/style/jquery.jscrollpane.css
+++ b/www/style/jquery.jscrollpane.css
@@ -14,6 +14,7 @@
 .jspPane
 {
 	position: absolute;
+	margin-left:0;
 }
 
 .jspVerticalBar
